--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-07-25  ChunEon Park (Hermet)
+
+        * Evas: Skip the map rendering if all points are transparent.
+
 2013-07-24  Mike Blumenkrantz
 
         * Ecore-Evas: fix usage of underlying X window after it has received a destroy event
