--- a/AUTHORS
+++ b/AUTHORS
@@ -40,7 +40,7 @@ Myungjae Lee <mjae.lee@samsung.com>
 Youness Alaoui <kakaroto@kakaroto.homelinux.net>
 billiob (Boris Faure) <billiob@gmail.com>
 Sung W. Park <sungwoo@gmail.com>
-Guillaume Friloux <guillaume.friloux@asp64.com>
+Guillaume Friloux <guillaume.friloux@gmail.com>
 Jonas M. Gastal <jgastal@profusion.mobi>
 Raphael Kubo da Costa <rakuco@freebsd.org>
 Jérôme Pinot <ngc891@gmail.com>
@@ -195,6 +195,7 @@ Myoungwoon Roy Kim(roy_kim) <myoungwoon.kim@samsung.com> <myoungwoon@gmail.com>
 Robert David <robert.david.public@gmail.com>
 Gwanglim Lee <gl77.lee@samsung.com> <gwanglim@gmail.com>
 Sung-Jin Park <sj76.park@samsung.com>
+Guillaume Friloux <guillaume.friloux@gmail.com>
 
 Embryo
 ------
