evas: use eina_file_virtualize() in evas_object_memfile_set().
NOTE: I am tempted to mark evas_object_memfile_set() as deprecated due
to the forced memcpy it introduced and the fact that it is now a 3 lines
of code to do the same in a more efficient way.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2013-07-31  Cedric Bail
 
 	* Eina: add eina_file_virtualize() and eina_file_virtual().
+	* Evas: use eina_file_virtualize() for evas_object_image_memfile_set().
 
 2013-07-25  ChunEon Park (Hermet)
 
