--- a/ChangeLog
+++ b/ChangeLog
@@ -4,7 +4,7 @@
 
 2013-07-31  Cedric Bail
 
-	* Eina: add eina_file_virtualize() and eina_file_virtual().
+	* Eina: add eina_file_refresh(), eina_file_virtualize() and eina_file_virtual().
 	* Evas: use eina_file_virtualize() for evas_object_image_memfile_set().
 
 2013-07-25  ChunEon Park (Hermet)
