Updated changelog/news with the max ascent/descent fixes.
Commit: 6583b83c7304dcc1cb3f6c869ba1a391770b677c.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-08-07  Tom Hacohen
+
+	* Evas textblock: Use max ascent/descent at the edges of the textblock.
+
 2013-08-07  Chris Michael
 
         * EFL: Require at least version 1.2 of the various wayland libraries to build EFL with wayland support.
