--- a/NEWS
+++ b/NEWS
@@ -59,6 +59,7 @@ Additions:
      - Use eina_file_virtualize() for evas_object_image_memfile_set().
      - Change mapping policy for image loader.
      - textblock: Use max ascent/descent at the edges of the textblock.
+     - textblock: Make the ellipsis format the same as the surrounding.
     * Ecore_X:
      - Add window profile support.
        ECORE_X_ATOM_E_WINDOW_PROFILE_SUPPORTED
