edje: add edje_file_mmap_set.
This reduce the number of system call to stat especially when using GROUP
and reduce the risk of a race condition when using GROUP.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-08-09  Cedric Bail
+
+	* Edje: add edje_object_mmap_set().
+
 2013-08-08  Tom Hacohen
 
 	* Evas textblock:  Make the ellipsis format the same as the surrounding.
