Sorry Jihoon, I have to revert this (for now). It completely breaks building of EFL :( I think perhaps you forgot to push the ecore_imf code that goes with this ??
Revert "Edje: add edje_object_part_text_input_panel_show_on_demand_set/get()"

This reverts commit 4b5ed04559aa1a782a96f945b725b452c05e4d60.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,6 @@
-2013-08-14  Jihoon Kim
-
-	* Edje: add edje_object_part_text_input_panel_show_on_demand_set/get().
-
 2013-08-13  Jihoon Kim
 
-	* Ecore_IMF: add ecore_imf_context_input_panel_on_demand_set/get().
+	* Ecore_IMF: add ecore_imf_context_input_panel_on_demand_set/get()
 
 2013-08-09  Cedric Bail
 
