--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-08-27  Tom Hacohen
+
+	* Evas bidi: Fixed a bug causing BiDi not to work in some cases.
+
 2013-08-20  David Seikel (onefang)
 
 	* Edje Lua: Check for both Lua 5.1 and 5.2.
