[edje_embryo] Fix play_sample's parameter count check
play_sample function requires 2 parameters however it checks parameter count as 1.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-08-27  Jaehyun Cho
+
+    * Fix edje play sample parameter checking.
+
 2013-08-27  Tom Hacohen
 
 	* Evas bidi: Fixed a bug causing BiDi not to work in some cases.
