evas: add evas_object_smart_iterator_new().
This is going to break Eo ABI. Rebuild all software using Eo API on top
of EFL (Elementary for example).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-09-05  Cedric Bail
+
+	* Evas: Add evas_object_smart_iterator_new().
+
 2013-09-04  Michael Bouchaud (yoz)
 
         * fix edje_object_scale_set to be recursive
