edje: add border linked to Image sets.
It is quite common that in an image sets each image has different border size.
This patch permit to define the border value on a per image basis in the set.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-09-06  Cedric Bail
+
+	* Edje: Add border information to Image sets.
+
 2013-09-05  Cedric Bail
 
 	* Evas: Add evas_object_smart_iterator_new().
