--- a/NEWS
+++ b/NEWS
@@ -131,6 +131,7 @@ Additions:
      - Reduce load time of Edje_Object using Evas_Object_Textblock and many styles.
      - Add edje_object_mmap_set.
      - Fix play sample parameter checking.
+     - Add border information to Image sets.
     * Eeze:
      - Add a dummy libmount replacement for when libmount is not there.
     * Ecore_Con:
