Evas font: Fixed evas_font_path_* functions to apply to fontconfig.
Until now those were only used for custom fonts, and not for fontconfig
searches. With this commit, fontconfig will also start looking in those
dirs.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2013-09-25  Tom Hacohen
 
+	* Evas font: Make the evas_font_path_* functions apply to fontconfig searches.
+
+2013-09-25  Tom Hacohen
+
 	* Evas font: Use our own fontconfig configuration so we don't get
 	affected by changes made to the default fontconfig configuration.
 
