evas: add JPEG 2000 loader.
This add finally support for JPEG 2000, but be aware that libopenjpeg
is very badly managed. There is currently only version 1.5.x that does
provide the right files, is usable by a third party and portable. You
can seriously forget any other version.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-10-01  Vincent Torri
+
+	* Evas: add JPEG 2000 support.
+
 2013-09-25  Tom Hacohen
 
 	* Evas font: Make the evas_font_path_* functions apply to fontconfig searches.
