--- a/NEWS
+++ b/NEWS
@@ -68,6 +68,7 @@ Additions:
      - Add interceptor for focus_set.
      - Evas font: Use our own fontconfig configuration so we don't get affected by changes made to the default fontconfig configuration.
      - Evas font: Make the evas_font_path_* functions apply to fontconfig searches.
+     - Add JPEG 2000 loader.
     * Ecore_X:
      - Add window profile support.
        ECORE_X_ATOM_E_WINDOW_PROFILE_SUPPORTED
