--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-10-02  Cedric Bail
+
+	* Eina: add eina_swap16(), eina_swap32(), eina_swap64().
+
 2013-10-02  Tom Hacohen
 
 	* Evas textblock: Use correct font underline properties when drawing
