--- a/NEWS
+++ b/NEWS
@@ -40,6 +40,7 @@ Additions:
      eina_rectangle_y_cut(), eina_rectangle_width_cut(), eina_rectangle_height_cut(), eina_rectangle_subtract(),
      EINA_RECTANGLE_INIT, EINA_RECTANGLE_FORMAT, EINA_RECTANGLE_ARGS.
      - Add eina_f16p16_double_from(), eina_f16p16_double_to().
+     - Add eina_swap16(), eina_swap32(), eina_swap64().
     * Eet:
      - Add eet_mmap()
      - Add eet_data_descriptor_name_get()
