eina: use Eina_Spinlock for Eina_Log.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2013-10-11  Cedric Bail
 
-	* Eina: add Eina_Spinlock API.
+	* Eina: add Eina_Spinlock API,
+	use Eina_Spinlock in Eina_Log.
 
 2013-10-10  Carsten Haitzler (The Rasterman)
 
