ecore-con: make curl support entirely runtime loaded via eina_module
this makes curl support a pure runtime-only thing. libcurl is loaded by
eina_module (dlopen/dlsym) when curl is actually first needed (when a
url connection/object is created). this means that ecore-con has no
link or compile dependencies on curl, only runtime, AND this saves
memory (due to curl inits using apparently a chunk of private pages).
so this saves memory and moves the dependency to runtime (though still
consider libcurl a dependency of efl - but like a binary executed,
it's at runtime).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-10-10  Carsten Haitzler (The Rasterman)
+
+        * Ecore-con: use dlopen/dlsym (eina_module) to load libcurl to
+        save memory (private pages) when not yet used by the process
+
 2013-10-10  Michael Bouchaud (yoz)
 
 	* Emotion: add two events to trigger webcam plug and unplug
