Revert "eina: use Eina_Spinlock for Eina_Chained_Mempool."
This patch brings in constant E crash for me. It seems to be timing
related which somehow leads to a mem corruption. Revert it for now
to allow people using E while Cedric looks into it.

This reverts commit 12d34309c7c6e3f3041ee576afe93f9ca335059e.

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,8 +8,7 @@
 2013-10-11  Cedric Bail
 
 	* Eina: add Eina_Spinlock API,
-	use Eina_Spinlock in Eina_Log, replace Eina_Lock by Eina_Spinlock in Eina_Stringshare,
-	Eina_Chained_Mempool.
+	use Eina_Spinlock in Eina_Log, replace Eina_Lock by Eina_Spinlock in Eina_Stringshare.
 	* Eet: replace Eina_Lock by Eina_Spinlock in Eet_Dictionnary.
 	* Evas: replace Eina_Lock by Eina_Spinlock in Evas_ScaleCache, Evas_Async_Events and Image_Entry.
 	* Ecore: use Eina_Spinlock for Ecore_Thread.
