Edje - Fixed memory leak in the edje map color transition.
Some cases, It doesn't free the interpolated colors.
Now it has guaranteed to free them always.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-10-15  ChunEon Park (Hermet)
+
+        * Fixed memory leak in the edje map color transition.
+
 2013-10-11  Carsten Haitzler (The Rasterman)
 
         * deprecate/remove all the eina_error setting (and getting)
