evas: Fixed the textblock format to be drawn according to the glyph's horizontal advance width.
Summary:
Some characters have different two value on glyph's width and horizontal advance width.
If the glyph's width is smaller than advance width, format can be drawn weird.

Test Plan:
Set underline:on to the entry style and just insert the following characters.
。
、
）
（

Reviewers: tasn, woohyun

CC: cedric

Differential Revision: https://phab.enlightenment.org/D270

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-10-18  Youngbok Shin
+
+        * Fixed the textblock format to be drawn according to
+        the glyph's horizontal advance width.
+
 2013-10-15  ChunEon Park (Hermet)
 
         * Fixed the map surface to be updated properly. By tranversing the 
