AUTHORS: we have some new contributor around !

--- a/AUTHORS
+++ b/AUTHORS
@@ -292,6 +292,9 @@ Daniel Zaoui <daniel.zaoui@yahoo.com>
 Daniel Willmann <d.willmann@samsung.com>
 Robert David <robert.david.public@gmail.com>
 Bluezery <ohpowel@gmail.com>
+Andrii Kroitor <an.kroitor@samsung.com>
+Vorobiov Vitalii <vi.vorobiov@samsung.com>
+m.biliavskyi <m.biliavskyi@samsung.com>
 
 Emotion
 -------
