Evas: Fixed textblock rendering to properly set render operation on context.
Render operation are not well tested. It appears that it was never properly setted
on a textblock, this would lead to see it rendered with the render operation of another
object.

Test Plan:
Add some rectangle object with textblock object.
The textblock style should be set to "backing=on backing_color=#ffffffff".
Set render operation to some rectangle with "evas_object_render_op_set(rect, EVAS_RENDER_COPY)".
Check the textblock.

Reviewers: woohyun, cedric, raster

Reviewed By: cedric

CC: cedric

Differential Revision: https://phab.enlightenment.org/D277

Signed-off-by: Cedric Bail <cedric.bail@samsung.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,10 @@
 2013-10-24  Sung W. Park (sung_)
         * EvasGL: Fixed direct rendering mode not clipping to its clip region.
 
+2013-10-24  Youngbok Shin
+
+        * Evas: Fix textblock rendering to properly set render operation on the context.
+
 2013-10-18  Youngbok Shin
 
         * Fixed the textblock format to be drawn according to
