AUTHORS: he has been definitively contributing !

--- a/AUTHORS
+++ b/AUTHORS
@@ -296,6 +296,7 @@ Bluezery <ohpowel@gmail.com>
 Andrii Kroitor <an.kroitor@samsung.com>
 Vorobiov Vitalii <vi.vorobiov@samsung.com>
 m.biliavskyi <m.biliavskyi@samsung.com>
+Vyacheslav Reutskiy <v.reutskiy@samsung.com>
 
 Emotion
 -------
