--- a/legacy/evas_generic_loaders/README
+++ b/legacy/evas_generic_loaders/README
@@ -1,4 +1,4 @@
-Evas generic loaders 1.7.99
+Evas generic loaders 1.8.0.
 
 ******************************************************************************
 
