--- a/eo2test/TODO
+++ b/eo2test/TODO
@@ -17,5 +17,19 @@
 - function name from pointer
    dladdr backtrace ??
 
+- Merge class and object, just like eo1
 
 - Change the order of EO2_OP_FUNC* functions to put the ID first?
+
+- Get rid of some of the EO2_VOID_FUNC_BODY macros using different number of macro params
+    - __ is reserved, change that.
+
+- Add line number to errors (like in eo1...)
+
+- Migrate mixin and suite tests
+
+- Fix return values in all the eo2_base functions, like eo2_event_freeze_get
+
+- Changing eo2_event_freeze_get and calling it wtrong in signals_main.c does *not* generate a warning~!!!!!
+
+-- FIX ALL THE TESTS!
