[edje_entry] Add null checking for name of anchor and item.
Summary:
Even if the anchor name is null, it will be appended to "anchors".
There are many null checking for name of anchor.
So it should be checked in geometry_get functions.

Test Plan:
Test with text "<a href =abc>We can't find name in this case</a>".
This text makes break the application. Because of a space between "href" and "=".
The name of anchor will be saved as null in "anchors".

Reviewers: woohyun, tasn, cedric

CC: cedric, raster

Differential Revision: https://phab.enlightenment.org/D318

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-11-05  Youngbok Shin
+
+        * Edje: Add null checking for name of anchor and item in geometry get functions.
+
 2013-11-03  Christophe Sadoine
 
         * Eet: Added EET_DATA_DESCRIPTOR_ADD_MAPPING_BASIC().
