--- a/eo2test/TODO
+++ b/eo2test/TODO
@@ -33,3 +33,7 @@
 - Changing eo2_event_freeze_get and calling it wtrong in signals_main.c does *not* generate a warning~!!!!!
 
 -- FIX ALL THE TESTS!
+
+- A bit annoying that we don't get type checks on the callbacks, fix that? That's really dangerous!
+
+- Have a way to say a class has no ops.
