Evas textblock: Fixed order of tags inserted with markup_app/prepend.
The order was messed up when inserting a few formats in the
markup_append/prepend functions without any characters between them.
For example, inserting "<b><i>" would result in "<i><b>" being inserted.

Thanks to YoungBok Shin for reporting this.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-11-19  Tom Hacohen
+
+	* Evas textblock: Fixed order of tags inserted with markup_app/prepend.
+
 2013-11-05  Youngbok Shin
 
         * Edje: Add null checking for name of anchor and item in geometry get functions.
