--- a/NEWS
+++ b/NEWS
@@ -360,7 +360,7 @@ Fixes:
      - Fixed the map surface to be updated properly. By tranversing the whole of the map target's tree, it decides to update the map surface to be redrawn if one of the objects is changed except the clipper itself.
      - Fixed the textblock format to be drawn according to the glyph's horizontal advance width.
      - Fixed the textblock set to context with the textblock object's render operation.
-
+     - Evas textblock: Fixed order of tags inserted with markup_app/prepend.
     * Ecore:
      - Don't leak fd on exec.
      - Fix fd handler increase issue when ecore_pipe_add/del is called repeatedly.
